# SAE

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
examples/: ablation_study_reconstruction.py  batchtopk_pipeline_example.py  clean_architecture_example.py  complete_sae_pipeline.py  embedding_generator_with_wrapper.py  example_training.py  load_genomic_datasets.py  load_refseq_data.py  preprocessing_example.py  refseq_pipeline_example.py  sae_pipeline_components_example.py  sequence_length_filter_example.py  test_batchtopk_improvements.py  test_l0_sparsity_logging.py  test_layer_embeddings.py  test_regular_sae_history.py  unified_pipeline_example.py
notebooks/: correlation_analysis_notebook.ipynb  reconstruction_ablation.ipynb  sae_pipeline_interactive.ipynb
scripts/: analyze_gbff_features.py  correlation_analysis_experiment.py  example_training.py
src/sae/: __init__.py
src/sae/data/: __init__.py  refseq_parser.py
src/sae/losses/: __init__.py  losses.py
src/sae/metrics/: __init__.py  correlation_analysis.py
src/sae/models/: __init__.py  batchtopk_sae.py  sae.py
src/sae/pipeline/: __init__.py  base_pipeline.py  batchtopk_pipeline.py  embedding_generator.py  pipeline.py  sae_pipeline.py
src/sae/preprocessing/: __init__.py  base.py  codon_utils.py  helical_transform.py  helical_wrapper.py  refseq_preprocessor.py
src/sae/training/: __init__.py  callbacks.py  example_training.py  trainer.py  utils.py
tests/: test_imports.py  test_pipeline.py  test_preprocessing.py
